# python-discord-family-bot

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  bot.py  config.example.yaml  deploy.sh  pyproject.toml  requirements.txt
cogs/: admin.py  calendar_cog.py  events.py  reminders.py  tasks.py
deployment/: update.sh
docs/: architecture.md  configuration.md  deployment.md  discord-setup.md  features.md  google-setup.md  testing.md
systemd/: familybot.service
tests/: ai_functions_unit_test.py  bot_state_system_test.py  calendar_integration_test.py  calendar_system_test.py  channel_visibility_unit_test.py  config_unit_test.py  conftest.py  daily_summary_unit_test.py  discord_fakes.py  embeddings_unit_test.py  functions_date_unit_test.py  functions_when_unit_test.py  google_calendar_unit_test.py  message_integration_test.py  message_system_test.py  reminder_system_test.py  reminders_integration_test.py
tools/: backfill_history.py  list_calendars.py
