[project]
name = "python-discord-family-bot"
version = "0.1.0"
description = "A Discord bot for a family server: reminders + AI Q&A grounded on family chat history."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "discord-py==2.4.0",
    "python-dotenv==1.0.1",
    "pytz==2024.1",
    "PyYAML==6.0.2",
    "openai==1.97.0",
    "numpy>=1.26,<2.1",
    "sentence-transformers>=3.0.0",
    "google-api-python-client==2.178.0",
    "google-auth==2.39.0",
    "google-auth-httplib2==0.2.0",
]

[project.optional-dependencies]
dev = [
    "black==24.8.0",
    "mypy==1.15.0",
    "pylint==3.2.7",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "types-pytz==2025.1.0.20250204",
    "types-PyYAML==6.0.12.20240917",
]

[tool.black]
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[[tool.mypy.overrides]]
module = ["sentence_transformers.*", "googleapiclient.*", "google.oauth2.*", "google_auth_httplib2.*"]
ignore_missing_imports = true
